tests/NormalTests/paczka1/fuzzy1/62861503.err
Error in line 5: 2DImkF S366 96,3
Error in line 4: tFCl A68 60,2
Error in line 8: dFnVQB A68 90,9
Error in line 18: A42 A42 78,3
Error in line 1: tHJL A42 8,1
Error in line 24: dFnVQB A42 261,8
Error in line 25: vFd4eHydn4v S366 22,7
Error in line 37: tFCl A68 55,0
